<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_book"
            android:layout_marginTop="6dp" />

        <TextView
            android:text="@string/search_books"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:layout_marginTop="15dp" />

    </LinearLayout>

    <View
        android:id="@+id/splitLine"
        android:layout_width="match_parent"
        android:layout_height= "2dp"
        android:background="#9d9d9d" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        style="@style/Widget.AppCompat.EditText"
        android:hint="@string/search_hint" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/searchBooks"
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_marginRight="5dp" />

        <Button
            android:id="@+id/cancelDialog"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_marginRight="5dp" />
    </LinearLayout>

</LinearLayout>
